# pyo3-rattler-build

./: .gitignore  Cargo.toml  pyproject.toml
.github/workflows/: CI.yml  package.yml
conda.recipe/: recipe.yaml
src/: lib.rs
tests/: test_core.py
