[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pyo3-rattler-build"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
pyo3-rattler-build = { path = ".", editable = true }

[tool.pixi.tasks]
test = "pytest tests"

[tool.pixi.dependencies]
rattler-build = ">=0.20.0,<0.21"
maturin = ">=1.7.0,<2"
pip = ">=24.2,<25"
pytest = ">=8.3.2,<9"
